[project]
name = "comfyui-bestresolution"
description = "Nodes for semi-automatic calculation of the best (most optimal) resolution, compatible with ANY model (from now or the future), accounting for upscale and pixel-step."
version = "0.0.1"
authors = [
  {name = "Lex Darlog"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/Lex-DRL/ComfyUI-BestResolution"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lex-drl"
DisplayName = "ComfyUI-BestResolution"
Icon = ""
