[project]
name = "best-resolution"
version = "3.0.0"
description = "QoL nodes for semi-automatic calculation of the best (most optimal) sampling resolution \n• compatible with ANY model (from now or the future), \n• accounting for upscale... \n• ...and pixel-step."
license = {file = "LICENSE.md"}
readme = "README.md"
authors = [
  {name = "Lex Darlog"}
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
  # https://docs.comfy.org/registry/specifications#classifiers-recommended
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Lex-DRL/ComfyUI-BestResolution"
"Bugs/Feature Requests" = "https://github.com/Lex-DRL/ComfyUI-BestResolution/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lex-drl"
DisplayName = "Best Resolution"
# Icon = "https://raw.githubusercontent.com/username/repo/main/icon.png"
# Banner = "https://raw.githubusercontent.com/username/repo/main/banner.png"
requires-comfyui = ">=0.3.60" # The first version to include io.Combo.Output
